--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,13 @@ input[title^="pi"] {
 input[title$="ci"] {
     border: 3px solid brown;
 }
+/*float*/
+.floated-inner {
+    width: 300px;
+    height: 300px;
+    background-color: red;
+    float: left;
+}
+#clear{
+    clear: both;
+}
